Html y css completo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dashboard Estático</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+  <header>
+    <div class="logo"></div>
+    <nav>
+      <a></a>
+      <a></a>
+      <a></a>
+    </nav>
+  </header>
+
+  <div class="submenu">
+    <div class="submenu-column">
+      <div class="highlight-bar"></div>
+      <ul>
+        <li></li><li></li><li></li><li></li><li></li>
+      </ul>
+    </div>
+    <div class="submenu-column">
+      <div class="highlight-bar"></div>
+      <ul>
+        <li></li><li></li><li></li><li></li><li></li>
+      </ul>
+    </div>
+    <div class="submenu-column">
+      <div class="highlight-bar"></div>
+      <ul>
+        <li></li><li></li><li></li><li></li><li></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="content">
+    <aside class="sidebar">
+      <div class="block light">
+        <ul>
+          <li></li><li></li><li></li><li></li><li></li>
+        </ul>
+      </div>
+      <div class="divider"></div>
+      <div class="block light">
+        <ul>
+          <li></li><li></li><li></li><li></li><li></li>
+        </ul>
+      </div>
+      <div class="block highlight">
+        <ul>
+          <li></li><li></li><li></li><li></li><li></li>
+        </ul>
+      </div>
+    </aside>
+
+    <main class="grid">
+      <!-- Primera fila -->
+      <div class="card"></div>
+      <div class="card featured"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <!-- Segunda fila -->
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <!-- Tercera fila -->
+      <div class="card"></div>
+      <div class="card"></div>
+    </main>
+  </div>
 </body>
 </html>
